<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/verlag_bold"
        android:text="@string/your_bank_s_contact"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeNormal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="24dp">

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/ic_trader_background"
            android:digits="@string/phone_chars"
            android:ems="10"
            android:fontFamily="@font/verlag_light"
            android:hint="@string/enter_a_phone_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="20"
            android:paddingStart="10dp"
            android:textColor="@color/deepBlue"
            android:textColorHint="#4C4C4C"
            android:textSize="@dimen/textSizeNormal" />

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/ic_btn_trader"
            android:fontFamily="@font/verlag_book"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/deepBlue"
            android:textSize="13sp" />
    </LinearLayout>

    <include
        android:id="@+id/notification_layout"
        layout="@layout/notification_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/verlag_bold"
        android:text="@string/time_frame_for_performance_graph_underlyings"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeNormal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:src="@color/warmGreyThree"
        tools:ignore="ContentDescription" />

    <RadioGroup
        android:id="@+id/chartInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/switchIntraday"
            style="@style/ChartIntervalOption"
            android:text="@string/intraday" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/switchThreemonth"
            style="@style/ChartIntervalOption"
            android:text="@string/three_months" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/switchSixMonths"
            style="@style/ChartIntervalOption"
            android:text="@string/six_months" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/switchOneYear"
            style="@style/ChartIntervalOption"
            android:text="@string/one_year" />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/verlag_bold"
        android:text="@string/time_frame_for_performance_graph_fx"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeNormal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:src="@color/warmGreyThree"
        tools:ignore="ContentDescription" />

    <RadioGroup
        android:id="@+id/chartIntervalFx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/switchIntradayFx"
            style="@style/ChartIntervalOption"
            android:text="@string/intraday" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/switchOneMonthFx"
            style="@style/ChartIntervalOption"
            android:text="@string/one_month" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/switchThreeMonthsFx"
            style="@style/ChartIntervalOption"
            android:text="@string/three_months" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/switchSixMonthsFx"
            style="@style/ChartIntervalOption"
            android:text="@string/six_months" />
    </RadioGroup>

</LinearLayout>