<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/verlag_bold"
        android:text="@string/save_trader_s_number"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_trader_background"
        android:digits="@string/phone_chars"
        android:fontFamily="@font/verlag_light"
        android:inputType="phone"
        android:maxLength="20"
        android:paddingStart="10dp"
        android:textColor="@color/deepBlue"
        android:textColorHint="@color/warmGrey"
        android:textSize="@dimen/textSizeSmall"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@tools:sample/us_phones" />

    <Button
        android:id="@+id/no"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/yes"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/DialogButton" />

    <Button
        android:id="@+id/yes"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        style="@style/DialogButton"
        android:text="@string/call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/no" />

</androidx.constraintlayout.widget.ConstraintLayout>